# Unions-Game

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_EN.md  README_RU.md  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/libs/: SDL3_image-3.2.6.aar
app/src/main/: AndroidManifest.xml
app/src/main/java/com/igorantivirus/new_sdl/: MainActivity.java
app/src/main/res/values/: strings.xml
assets/: stat.xml
assets/fonts/: fonts.txt
assets/objects/banknots/: config.xml
assets/objects/coins/: config.xml
assets/objects/friuts/: config.xml
assets/objects/fruits/: config.xml
assets/objects/planets/: config.xml
assets/ui/: GameMenu.css  GameMenu.html  MainMenu.css  MainMenu.html  SetsMenu.css  SetsMenu.html  SettingsMenu.css  SettingsMenu.html  file.html  game-card.rcss  game-menu.rcss  game-menu.rml  game_card.template.rcss  game_card.template.rml  main-menu.rcss  main-menu.rml  main.rml  scrol.rcss  scrol.rml  settings-menu.rcss  settings-menu.rml
assets/ui/overlays/: gameover-overlay.rcss  gameover-overlay.rml  menu-buttons.rcss  overlay.rcss  pause-overlay.rml
gradle/: libs.versions.toml
src/: CollisionMeneger.hpp  ContactCheker.hpp  EngineConfig.hpp  Entity.hpp  EntityFactory.hpp  main.cpp  pr.hpp
src/App/: AppEvents.hpp  AppScenesFactory.hpp  AppState.hpp  GameSceneFactory.hpp  HardStrings.hpp
src/App/GameObjects/: Config.hpp  ContactCheker.hpp  Entity.hpp  EntityFactory.hpp  GameContactCheker.hpp  GameObject.hpp  GameObjectFactory.hpp  ObjectFactory.hpp  deleteQueue.hpp
src/App/IO/: FullFileWorker.hpp  GameStatisticIO.hpp  ObjectPackIO.hpp
src/App/PhysicBase/: Config.hpp  Entity.hpp  EntityFactory.hpp  PolygonShape.hpp
src/App/Physics/: Config.hpp  Entity.hpp  EntityFactory.hpp
src/App/Resources/: GameObjectFactory.hpp  ObjectFactory.hpp  ObjectLibrary.hpp  ObjectPack.hpp  PackageContainer.hpp  TextureManager.hpp  Types.hpp
src/App/Scenes/: GameScene.hpp  IDs.hpp  MainMenuScene.hpp  SettingsMenu.hpp
src/App/Statistic/: AllGameStatistic.hpp  GameStatistic.hpp  GameStatisticReader.hpp  Time.hpp
src/Core/: AudioMeneger.hpp  BaseFolder.hpp  EventAdder.hpp  FileWorker.hpp  MixerMemmory.hpp  PathMeneger.hpp  Random.hpp  Time.hpp  Types.hpp
src/Core/Audio/: Audio.hpp  AudioDevice.hpp
src/Core/Managers/: AudioManager.hpp  PathMeneger.hpp
src/Engine/: AdvancedContext.hpp  Engine.hpp  EngineSettings.hpp  OneRmlDocScene.hpp  Scene.hpp  SceneAction.hpp  SceneFabrick.hpp  Types.hpp
src/PhysicObjects/: Object.hpp  PhysicBody.hpp  PhysicsShapes.hpp
